changes from feedback on pull request